k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: worker-deployment
spec:
   replicas: 1
   selector:
   # handle for deployment.
      matchLabels:
         component: worker
   template:
      metadata:
         labels:
            component: worker
      spec:
         containers:
            - name: worker
              image: rodrr301/multi-worker
              # no port needed as no one will access this container.. only outgoing call.
