k8s/redis-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
   name: redis-cluster-ip-service
spec:
   # clusterIP is a restrictive nodePort service, where it allows access to the pod/deployment only from other pods within the cluster/node.
   type: ClusterIP
   selector:
   # set of pods the clusterIP service manages
      component: redis
   ports:
      # port exposed outside.
      - port: 6379
        targetPort: 6379
        # there is no nodeport as clusterIP is not used to allow access to the outside world.
