k8s/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
   name: server-cluster-ip-service
spec:
   # clusterIP is a restrictive nodePort service, where it allows access to the pod/deployment only from other pods within the cluster/node.
   type: ClusterIP
   selector:
   # matches the deployment/pod label.
      component: server
   ports:
      # port exposed outside.
      - port: 5000
        targetPort: 5000
        # there is no nodeport as clusterIP is not used to allow access to the outside world.
