k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
   name: ingress-service
   annotations: 
      # tell kubernetes that we need to create an ingress class of nginx implementation.
      kubernetes.io/ingress.class: nginx
      # rewrite rule from in url to target url.
      nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
   rules:
      - http:
           paths:
              - path: /?(.*)
                backend:
                   serviceName: client-cluster-ip-service
                   servicePort: 3000
              - path: /api/?(.*)
                backend:
                   serviceName: server-cluster-ip-service
                   servicePort: 5000
